<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="com.bootcamp.ilhamsetyabudi_mealdb.data.network.model.MealsItems" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_meals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/light_black"
        android:elevation="10dp"
        android:orientation="horizontal"
        card_view:cardCornerRadius="14dp"
        card_view:cardElevation="10dp"
        card_view:cardMaxElevation="1dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_meal"
                loadImageFromUrl="@{data.strMealThumb}"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/image_meal"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_launcher" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/iv_meal">

                <TextView
                    android:id="@+id/meal_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="4dp"
                    android:maxLines="2"
                    android:text="@{data.strMeal}"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    tools:text="@string/meal_name" />

                <TextView
                    android:id="@+id/id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/meal_name"
                    android:layout_marginStart="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@{data.idMeal}"
                    android:textColor="@color/light_gray"
                    android:textSize="12sp"
                    tools:text="@string/meal_id" />
            </RelativeLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</layout>